[project]
name = "fritztools"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "fritzconnection>=1.13.0",
]
dynamic = ["version", "description"]
readme = "README.md"

[project.scripts]
fritz = "fritztools.fritz:fritz"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "fritztools.fritz"
